Add deployment configuration and project files